--- a/chigumbura_sports_academy/templates/accounts/edit_profile.html
+++ b/chigumbura_sports_academy/templates/accounts/edit_profile.html
@@ -4,11 +4,7 @@
 {% block title %}Chigumbura Sports Academy :{% endblock %}
 {% block content %}
    <!-- //header -->
-   <div class="main-content inner">
-        <div class="overlay inner">
-
-        </div>
-    </div>
+   {% include 'base/snippets/dash_menu.html' %}
 
 <section class="contact-main py-5">
         <div class="container py-md-5">
