--- a/chigumbura_sports_academy/templates/accounts/profile.html
+++ b/chigumbura_sports_academy/templates/accounts/profile.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 {% block title %}Chigumbura Sports Academy : {{user.username}}{% endblock %}
 {% block content %}
-
+{% include 'base/snippets/dash_menu.html' %}
 
 <div class="container">
         {% if messages %}
@@ -15,13 +15,24 @@
         </div>
         {% endfor %}
         {% endif %}
-    <h1>Profile</h1>
-    <p>Username: {{ user }}</p>
-    <p>First name: {{ user.first_name }}</p>
-    <p>Last name: {{ user.last_name }}</p>
-    <p>Email: {{ user.email }}</p>
-    <a href="{% url 'accounts:change_password' %}">Change Password</a>
-    <a href="{% url 'accounts:edit_profile' %}">Edit Profile</a>
+   
+        <div class="row">
+          <div class="col-md-2"></div>
+          <div class="col-md-6">
+            <p>Username: {{ user }}</p>
+            <p>First name: {{ user.first_name }}</p>
+            <p>Last name: {{ user.last_name }}</p>
+            <p>Email: {{ user.email }}</p>
+    
+          </div>
+          <div class="col-md-2">
+           <p> <a class="btn btn-primary" href="{% url 'accounts:change_password' %}">Change Password</a></p>
+          
+           <p> <a class="btn btn-primary" href="{% url 'accounts:edit_profile' %}">Edit Profile</a></p>
+          </div>
+          <div class="col-md-2"></div>
+        </div>
+  
   
     
 
